# OmegaX-engine

./: CMakeLists.txt  OmegaX.h  README.md  changelog.txt  core.c  core.h  main.c  rendering.c  rendering.h  win.c  win.h
